warning file added

--- a/index.html
+++ b/index.html
@@ -114,9 +114,12 @@
 
 
 
-
 		<!--===================== start  Home   =========================-->
 		<section id="home">
+			<div class="warning">
+				<h3><a href="https://mahmudjewel.herokuapp.com/">Please visit the update portfolio. Click Here</a></h3>
+			</div>
+			<br><br><br>
 			<div class="left-right">
 				<div>
 					<div class="left" >
@@ -132,7 +135,11 @@
 			<div class="social" data-aos="fade-up" data-aos-delay="200">
 				<div><a href="https://www.youtube.com/channel/UCJCdq7lWqB7M5b16UatoTEw" target="_blank"><i class="fa fa-youtube"></i></a></div>
 
-				<div><a href="https://github.com/MahmudJewel"target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a></div>
+				<div><a href="https://github.com/MahmudJewel" target="_blank"><i class="fa fa-github"></i></a></div>
+
+				<div><a href="https://www.hackerrank.com/DJ_cse" target="_blank"><i class="fab fa-hackerrank"></i></a></div>
+
+				<div><a href="https://www.linkedin.com/in/jewel-mahmud-b1367a1b0" target="_blank"><i class="fa fa-linkedin"></i></a></div>
 
 				<div><a href="https://www.facebook.com/Bullet007.0" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook"></i></a></div>
 
@@ -374,22 +381,32 @@
 
 			<div class="screenshot">
 				<div class="over">
-					<a href="https://github.com/MahmudJewel/Weather" target="_blank">
-					Weather Detector  
-					</a>
-					<p>Python Project</p>
-				</div>
-				<img src="images/Weather/img2.jpg">
-			</div>
-
-			<div class="screenshot">
-				<div class="over">
 					<a href="https://github.com/MahmudJewel/ToDoApps" target="_blank">
 					ToDoApps  
 					</a>
 					<p>Python Project</p>
 				</div>
 				<img src="images/ToDoApps/todo1.jpg">
+			</div>
+
+			<div class="screenshot">
+				<div class="over">
+					<a href="https://github.com/MahmudJewel/portfolioWithDjango" target="_blank">
+					Portfolio-Django  
+					</a>
+					<p>Python Project</p>
+				</div>
+				<img src="images/Dj-portfolio/dj-portfolio.jpg">
+			</div>
+
+			<div class="screenshot">
+				<div class="over">
+					<a href="https://github.com/MahmudJewel/Weather" target="_blank">
+					Weather Detector  
+					</a>
+					<p>Python Project</p>
+				</div>
+				<img src="images/Weather/img2.jpg">
 			</div>
 
 			<div class="screenshot">
